# greqs

./: .coveragerc  README.md  pyproject.toml  tests.py  tox.ini
example/: mod1.py  mod2.py  mod_err.py  requirements.txt
example/pkg1/: __init__.py  _mod1.py  mod1.py
example/pkg2/: admin.py
greqs/: __init__.py  cli.py  config.py  helper.py
tests/: test_greqs.py
tests/mocks/flask-3.0.3.dist-info/: RECORD
tests/mocks/zangar-0.1.dev20250421033559.dist-info/: LICENSE  METADATA  RECORD
tests/sitepackages/e1/: m1.py  m2.py
tests/sitepackages/zangar-0.1.dev20250421033559.dist-info/: direct_url.json  top_level.txt
