[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "greqs"
dynamic = ["version"]
dependencies = [
    "importlib_metadata",
    "tomli>=1; python_version<'3.11'",
    "requirements-parser",
]
requires-python = ">= 3.8"

[tool.setuptools.dynamic]
version = { attr = "greqs.__version__" }

[project.scripts]
greqs = "greqs.cli:main"

[tool.pytest.ini_options]
